# CMake-Templates

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_cn.md  README_en.md  build.ps1  build.sh
app/: CMakeLists.txt  test-linkedlist.cpp
docs/app/: CMakeLists.txt  test-myclass.cpp
docs/opencv/: README.md  build-opencv.bat  build-opencv.sh
docs/src/: CMakeLists.txt
docs/src/myClass/: myClass.cpp
dynamic-library/app/: CMakeLists.txt
dynamic-library/src/: CMakeLists.txt
exe/: CMakeLists.txt
include/DataStruture/: LinkedList.hpp
install-library/: CMakeLists.txt
install-library/include/: myClass.h
install-library/src/: CMakeLists.txt
src/myClass/: CMakeLists.txt
static-library/app/: CMakeLists.txt
static-library/src/: CMakeLists.txt
templates/compile-executable_file/: CMakeLists.txt  README.md  zhihu.md
templates/compile-executable_file/app/: CMakeLists.txt
templates/compile-library/: CMakeLists.txt  README.md  zhihu.md
templates/compile-library/include/: myClass.h
templates/compile-library/src/: CMakeLists.txt  myClass.cpp
templates/compile-static_library/: CMakeLists.txt
templates/configure-environment/: CMakeLists.txt  README.md
templates/configure-environment/app/: CMakeLists.txt  main.cpp
templates/configure-project/: CMakeLists.txt  README.md
templates/configure-project/app/: CMakeLists.txt  main.cpp
templates/dynamic-library/src/: myClass.cpp
templates/install-library/: CMakeLists.txt  README.md
templates/install-library/src/: CMakeLists.txt
templates/link-3rd_party/: README.md
templates/link-opencv/app/: CMakeLists.txt  filter.cpp
templates/static-library/app/: test-sl.cpp
templates/with-3rd_party/: CMakeLists.txt
templates/with-3rd_party/app/: CMakeLists.txt  test.cpp
templates/with-opencv/: CMakeLists.txt
templates/with-opencv/app/: CMakeLists.txt  app-match-sift.cpp
